Remove extensions from search and index endpoints, rename extensions to expansions in the show endpoint
